# backend/static/swagger.json
@@ -1,157 +1,89 @@
 {
-    "openapi": "3.0.0",
-    "info": {
-      "title": "Translation API",
-      "version": "1.0.0",
-      "description": "API for text and audio translation."
-    },
-    "paths": {
-      "/api/v1/translate": {
-        "post": {
-          "summary": "Translate text to Twi",
-          "operationId": "translateText",
-          "requestBody": {
-            "required": true,
+  "openapi": "3.0.0",
+  "info": {
+    "title": "Translation API",
+    "version": "1.0.0",
+    "description": "API for text and audio translation."
+  },
+  "paths": {
+    "/api/v1/translate": {
+      "post": {
+        "summary": "Translate text to Twi",
+        "operationId": "translateText",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "text": {
+                    "type": "string",
+                    "example": "Hello, how are you?"
+                  }
+                },
+                "required": [
+                  "text"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Translation successful",
             "content": {
               "application/json": {
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "text": {
+                    "status": {
                       "type": "string",
-                      "example": "Hello, how are you?"
+                      "example": "success"
+                    },
+                    "translated_text": {
+                      "type": "string",
+                      "example": "Akwabaa, wo ho te sεn?"
                     }
-                  },
-                  "required": ["text"]
+                  }
                 }
               }
             }
           },
-          "responses": {
-            "200": {
-              "description": "Translation successful",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "type": "object",
-                    "properties": {
-                      "status": {
-                        "type": "string",
-                        "example": "success"
-                      },
-                      "translated_text": {
-                        "type": "string",
-                        "example": "Akwabaa, wo ho te sεn?"
-                      }
-                    }
-                  }
-                }
-              }
-            },
-            "400": {
-              "description": "Invalid input",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "type": "object",
-                    "properties": {
-                      "status": {
-                        "type": "string",
-                        "example": "failed"
-                      },
-                      "message": {
-                        "type": "string",
-                        "example": "Missing fields"
-                      }
-                    }
-                  }
-                }
-              }
-            },
-            "500": {
-              "description": "Server error",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "type": "object",
-                    "properties": {
-                      "status": {
-                        "type": "string",
-                        "example": "failed"
-                      },
-                      "message": {
-                        "type": "string",
-                        "example": "Internal server error"
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
-      "/api/v1/translate-audio": {
-        "post": {
-          "summary": "Transcribe audio to text and then translate to English",
-          "operationId": "translateAudio",
-          "requestBody": {
-            "required": true,
+          "400": {
+            "description": "Invalid input",
             "content": {
-              "multipart/form-data": {
+              "application/json": {
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "audio": {
+                    "status": {
                       "type": "string",
-                      "format": "binary"
-                    }
-                  },
-                  "required": ["audio"]
-                }
-              }
-            }
-          },
-          "responses": {
-            "200": {
-              "description": "Audio transcription and translation successful",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "type": "object",
-                    "properties": {
-                      "status": {
-                        "type": "string",
-                        "example": "success"
-                      },
-                      "transcription": {
-                        "type": "string",
-                        "example": "Hello, how are you?"
-                      },
-                      "translation": {
-                        "type": "string",
-                        "example": "Hello, how are you?"
-                      }
+                      "example": "failed"
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Missing fields"
                     }
                   }
                 }
               }
-            },
-            "500": {
-              "description": "Server error",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "type": "object",
-                    "properties": {
-                      "status": {
-                        "type": "string",
-                        "example": "failed"
-                      },
-                      "message": {
-                        "type": "string",
-                        "example": "Internal server error"
-                      }
+            }
+          },
+          "500": {
+            "description": "Server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string",
+                      "example": "failed"
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Internal server error"
                     }
                   }
                 }
@@ -160,6 +92,82 @@
           }
         }
       }
+    },
+    "/api/v1/chat": {
+      "post": {
+        "summary": "Send a message for translation and LLM response",
+        "operationId": "promptInTwi",
+        "description": "Translates a message from English to twi and gets a response from the language model.",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "message": {
+                    "type": "string",
+                    "example": "Kyerɛkyerɛ hia a kasa a wɔde di dwuma ntɛmntɛm ho nhwɛso ho hia mu"
+                  }
+                },
+                "required": [
+                  "message"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "prompt": {
+                  "type": "string",
+                  "example": "Kyerɛkyerɛ hia a kasa a wɔde di dwuma ntɛmntɛm ho nhwɛso ho hia mu"
+                },
+                "response": {
+                  "type": "string",
+                  "example": "Explain the importance of a quick language model."
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "failed"
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Missing JSON fields"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server error",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "failed"
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Internal server error"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   }
-  
+}
